@startuml domain

title Task Management - Domain Model

' ─── Enums ───────────────────────────────────────────────
enum Status {
  TO_DO
  IN_PROGRESS
  DONE
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

' ─── Aggregate Root ──────────────────────────────────────
class Task {
  + id: UUID
  + title: String
  + description: String
  + status: Status
  + priority: Priority
  --
  + createTask(title, description, priority): Task
  + updateStatus(status: Status): void
  + adjustPriority(priority: Priority): void
}

' ─── Read Models ─────────────────────────────────────────
class TaskSummary {
  + id: UUID
  + title: String
  + description: String
  + status: Status
  + priority: Priority
}

class TaskHistory {
  + historyId: UUID
  + taskId: UUID
  + action: String
  + timestamp: DateTime
  + userId: UUID
}

' ─── Relationships ────────────────────────────────────────
Task "1" --> "1" Status : has
Task "1" --> "1" Priority : has

Task ..> TaskSummary : projects to
Task "1" *-- "0..*" TaskHistory : records

@enduml

